fix(zoom image): fix zoom when touch detected on mobile

--- a/src/styles/sidebar/filter/_checkbox.scss
+++ b/src/styles/sidebar/filter/_checkbox.scss
@@ -17,8 +17,8 @@
 .checkbox-item label {
   cursor: pointer;
   position: absolute;
-  width: 14px;
-  height: 14px;
+  width: 15px;
+  height: 15px;
   top: 0;
   left: 0;
   background-color: #fff;
@@ -44,10 +44,10 @@
   opacity: 0.4;
 }
 
-.checkbox-item input[type=checkbox]:checked + label:after {
+.checkbox-item input[type="checkbox"]:checked + label:after {
   opacity: 1;
 }
 
-input[type=checkbox]:checked ~ label {
+input[type="checkbox"]:checked ~ label {
   color: $color-grey-dark;
 }
